fixed overflowing issues with border-box

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -22,7 +27,7 @@ body {
 .sidebar {
     background: rgb(80, 80, 80);
     height: 100vh;
-    width: 230px;
+    width: 220px;
     z-index: 2;
     position: absolute;
     left: -180px;
@@ -40,22 +45,23 @@ body {
     border-bottom: 1px solid rgb(129, 127, 127);
 }
 .sidebar_title img{
-    width: 40px;
+    width: 30px;
     padding-left: 5px;
 }
-.sidebar_open_button button {
+.sidebar_button {
     border: none;
     background: inherit;
     padding: 0;
 }
-#sidebar_open_btn_img {
-    width: 35px;
+.sidebar_open_btn_img {
+    cursor: pointer;
+    width: 30px;
     transition: 0.5s ease;
 }
-#sidebar_open_btn_img.rotate {
+.sidebar_open_btn_img.rotate {
     transform: rotate(360deg);
 }
-.sidebar_button_mobile {
+.sidebar_button.m {
     display: none;
 }
 
@@ -79,11 +85,27 @@ body {
     margin-left: 220px;
 }
 
+.main_content_header {
+    width: 100%;
+    height: 45px;
+    background: rgb(13, 201, 54);
+}
+.main_content_header.section1 {
+    padding: 0px 10px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+
+
+
+
 @media (max-width: 500px) {
     .main_content {
         margin-left: 0px;
     }
-    .sidebar_button_mobile {
+    .sidebar_button.m {
         display: block;
     }
     .main_content.sidebar_active {
